# rc

./: Cargo.toml  LICENSE  README.md  install.sh  release.sh
src/: app.rs  config.rs  fileops.rs  input.rs  layout.rs  lib.rs  main.rs  panel.rs  shell.rs  theme.rs  types.rs  ui.rs  watcher.rs
tests/: ui.rs
