[package]
name = "rust-commander"
version = "1.1.2"
edition = "2024"
authors = ["KvizadSaderah <kvizad@gmail.com>"]

[[bin]]
name = "rc"
path = "src/main.rs"

[dependencies]
chrono = "0.4.45"
crossterm = "0.29.0"
notify = "8.2.0"
ratatui = "0.30.2"
tokio = { version = "1.43.0", features = ["full"] }
trash = "5.2.6"
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy", "fancy-regex"] }
ratatui-image = { version = "11.0.4", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25.5"


